--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "gulp-debug": "^4.0.0",
     "gulp-favicons": "^3.0.0",
     "gulp-file-include": "^2.3.0",
+    "gulp-header": "^2.0.9",
     "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^3.0.0",
+    "gulp-ignore": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
     "gulp-postcss": "^9.0.1",
     "gulp-purgecss": "^4.1.3",
